force-app/main/default/objects/DataImport__c/fields/Account1_City__c.field-meta.xml
<CustomField>
    <fullName>Account1_City__c</fullName>
    <inlineHelpText>Account1.BillingCity</inlineHelpText>
    <label>Account1 City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>