force-app/main/default/objects/DataImport__c/fields/Account1_Name__c.field-meta.xml
<CustomField>
    <fullName>Account1_Name__c</fullName>
    <inlineHelpText>Account1.Name</inlineHelpText>
    <label>Account1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>