force-app/main/default/objects/DataImport__c/fields/Account1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account1_Phone__c</fullName>
    <inlineHelpText>Account1.Phone</inlineHelpText>
    <label>Account1 Phone</label>
    <type>Phone</type>
</CustomField>