force-app/main/default/objects/DataImport__c/fields/Account1_Street__c.field-meta.xml
<CustomField>
    <fullName>Account1_Street__c</fullName>
    <inlineHelpText>Account1.BillingStreet</inlineHelpText>
    <label>Account1 Street</label>
    <type>TextArea</type>
</CustomField>