force-app/main/default/objects/DataImport__c/fields/Account1_Website__c.field-meta.xml
<CustomField>
    <fullName>Account1_Website__c</fullName>
    <inlineHelpText>Account1.Website</inlineHelpText>
    <label>Account1 Website</label>
    <type>Url</type>
</CustomField>