force-app/main/default/objects/DataImport__c/fields/Account1Imported__c.field-meta.xml
<CustomField>
    <fullName>Account1Imported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account1 Imported</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPSP Data Imports (Account1 Imported)</relationshipLabel>
    <relationshipName>Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>