force-app/main/default/objects/DataImport__c/fields/Account1ImportStatus__c.field-meta.xml
<CustomField>
    <fullName>Account1ImportStatus__c</fullName>
    <label>Account1 Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>