force-app/main/default/objects/DataImport__c/fields/Account2_City__c.field-meta.xml
<CustomField>
    <fullName>Account2_City__c</fullName>
    <inlineHelpText>Account2.BillingCity</inlineHelpText>
    <label>Account2 City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>