force-app/main/default/objects/DataImport__c/fields/Account2_Country__c.field-meta.xml
<CustomField>
    <fullName>Account2_Country__c</fullName>
    <inlineHelpText>Account2.BillingCountry</inlineHelpText>
    <label>Account2 Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>