force-app/main/default/objects/DataImport__c/fields/Account2_Name__c.field-meta.xml
<CustomField>
    <fullName>Account2_Name__c</fullName>
    <inlineHelpText>Account2.Name</inlineHelpText>
    <label>Account2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>