force-app/main/default/objects/DataImport__c/fields/Account2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account2_Phone__c</fullName>
    <inlineHelpText>Account2.Phone</inlineHelpText>
    <label>Account2 Phone</label>
    <type>Phone</type>
</CustomField>