force-app/main/default/objects/DataImport__c/fields/Account2_Street__c.field-meta.xml
<CustomField>
    <fullName>Account2_Street__c</fullName>
    <inlineHelpText>Account2.BillingStreet</inlineHelpText>
    <label>Account2 Street</label>
    <type>TextArea</type>
</CustomField>