force-app/main/default/objects/DataImport__c/fields/Account2_Website__c.field-meta.xml
<CustomField>
    <fullName>Account2_Website__c</fullName>
    <inlineHelpText>Account2.Website</inlineHelpText>
    <label>Account2 Website</label>
    <type>Url</type>
</CustomField>