force-app/main/default/objects/DataImport__c/fields/Account2_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account2_Zip_Postal_Code__c</fullName>
    <inlineHelpText>Account2.BillingPostalCode</inlineHelpText>
    <label>Account2 Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>