force-app/main/default/objects/DataImport__c/fields/Account2ImportStatus__c.field-meta.xml
<CustomField>
    <fullName>Account2ImportStatus__c</fullName>
    <label>Account2 Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>