force-app/main/default/objects/DataImport__c/fields/ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ApexJobId__c</fullName>
    <description>The ApexJobID of the Batch Job that processed the record.</description>
    <inlineHelpText>The ApexJobID of the Batch Job that processed the record.</inlineHelpText>
    <label>ApexJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>