force-app/main/default/objects/DataImport__c/fields/Contact1_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Alternate_Email__c</fullName>
    <inlineHelpText>Contact1.npe01__AlternateEmail__c</inlineHelpText>
    <label>Contact1 Alternate Email</label>
    <type>Email</type>
</CustomField>