force-app/main/default/objects/DataImport__c/fields/Contact1_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Birthdate__c</fullName>
    <inlineHelpText>Contact1.Birthdate</inlineHelpText>
    <label>Contact1 Birthdate</label>
    <type>Date</type>
</CustomField>