force-app/main/default/objects/DataImport__c/fields/Contact1_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Home_Phone__c</fullName>
    <inlineHelpText>Contact1.HomePhone</inlineHelpText>
    <label>Contact1 Home Phone</label>
    <type>Phone</type>
</CustomField>