force-app/main/default/objects/DataImport__c/fields/Contact1_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Mobile_Phone__c</fullName>
    <inlineHelpText>Contact1.MobilePhone</inlineHelpText>
    <label>Contact1 Mobile Phone</label>
    <type>Phone</type>
</CustomField>