force-app/main/default/objects/DataImport__c/fields/Contact1_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Other_Phone__c</fullName>
    <inlineHelpText>Contact1.OtherPhone</inlineHelpText>
    <label>Contact1 Other Phone</label>
    <type>Phone</type>
</CustomField>