force-app/main/default/objects/DataImport__c/fields/Contact1_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Personal_Email__c</fullName>
    <inlineHelpText>Contact1.npe01__HomeEmail__c</inlineHelpText>
    <label>Contact1 Personal Email</label>
    <type>Email</type>
</CustomField>