force-app/main/default/objects/DataImport__c/fields/Contact1_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Preferred_Phone__c</fullName>
    <inlineHelpText>Contact1.npe01__PreferredPhone__c</inlineHelpText>
    <label>Contact1 Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>