force-app/main/default/objects/DataImport__c/fields/Contact1_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Salutation__c</fullName>
    <inlineHelpText>Contact1.Salutation</inlineHelpText>
    <label>Contact1 Salutation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>