force-app/main/default/objects/DataImport__c/fields/Contact1_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Title__c</fullName>
    <inlineHelpText>Contact1.Title</inlineHelpText>
    <label>Contact1 Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>