force-app/main/default/objects/DataImport__c/fields/Contact1_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Work_Email__c</fullName>
    <inlineHelpText>Contact1.npe01__WorkEmail__c</inlineHelpText>
    <label>Contact1 Work Email</label>
    <type>Email</type>
</CustomField>