force-app/main/default/objects/DataImport__c/fields/Contact1_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Work_Phone__c</fullName>
    <inlineHelpText>Contact1.npe01__WorkPhone__c</inlineHelpText>
    <label>Contact1 Work Phone</label>
    <type>Phone</type>
</CustomField>