force-app/main/default/objects/DataImport__c/fields/Contact1ImportStatus__c.field-meta.xml
<CustomField>
    <fullName>Contact1ImportStatus__c</fullName>
    <label>Contact1 Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>