force-app/main/default/objects/DataImport__c/fields/Contact2_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Birthdate__c</fullName>
    <inlineHelpText>Contact2.Birthdate</inlineHelpText>
    <label>Contact2 Birthdate</label>
    <type>Date</type>
</CustomField>