force-app/main/default/objects/DataImport__c/fields/Contact2_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Firstname__c</fullName>
    <inlineHelpText>Contact2.Firstname</inlineHelpText>
    <label>Contact2 First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>