force-app/main/default/objects/DataImport__c/fields/Contact2_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Lastname__c</fullName>
    <inlineHelpText>Contact2.Lastname</inlineHelpText>
    <label>Contact2 Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>