force-app/main/default/objects/DataImport__c/fields/Contact2_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Mobile_Phone__c</fullName>
    <inlineHelpText>Contact2.MobilePhone</inlineHelpText>
    <label>Contact2 Mobile Phone</label>
    <type>Phone</type>
</CustomField>