force-app/main/default/objects/DataImport__c/fields/Contact2_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Other_Phone__c</fullName>
    <inlineHelpText>Contact2.OtherPhone</inlineHelpText>
    <label>Contact2 Other Phone</label>
    <type>Phone</type>
</CustomField>