force-app/main/default/objects/DataImport__c/fields/Contact2_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Salutation__c</fullName>
    <inlineHelpText>Contact2.Salutation</inlineHelpText>
    <label>Contact2 Salutation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>