force-app/main/default/objects/DataImport__c/fields/Contact2_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Title__c</fullName>
    <inlineHelpText>Contact2.Title</inlineHelpText>
    <label>Contact2 Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>