force-app/main/default/objects/DataImport__c/fields/Contact2_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Work_Email__c</fullName>
    <inlineHelpText>Contact2.npe01__WorkEmail__c</inlineHelpText>
    <label>Contact2 Work Email</label>
    <type>Email</type>
</CustomField>