force-app/main/default/objects/DataImport__c/fields/Contact2_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Work_Phone__c</fullName>
    <inlineHelpText>Contact2.npe01__WorkPhone__c</inlineHelpText>
    <label>Contact2 Work Phone</label>
    <type>Phone</type>
</CustomField>