force-app/main/default/objects/DataImport__c/fields/Contact2ImportStatus__c.field-meta.xml
<CustomField>
    <fullName>Contact2ImportStatus__c</fullName>
    <label>Contact2 Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>