force-app/main/default/objects/DataImport__c/fields/Donation_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Donation_Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>