force-app/main/default/objects/DataImport__c/fields/Donation_Description__c.field-meta.xml
<CustomField>
    <fullName>Donation_Description__c</fullName>
    <inlineHelpText>Opportunity.Description</inlineHelpText>
    <label>Donation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>