force-app/main/default/objects/DataImport__c/fields/Donation_Elevate_Recurring_ID__c.field-meta.xml
<CustomField>
    <fullName>Donation_Elevate_Recurring_ID__c</fullName>
    <description>The external, unique ID of the Recurring Donation in Elevate that this donation Opportunity is linked to.</description>
    <inlineHelpText>The external, unique ID of the Recurring Donation in Elevate that this donation Opportunity is linked to.</inlineHelpText>
    <label>Donation Elevate Recurring ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>