force-app/main/default/objects/DataImport__c/fields/Donation_Honoree_Name__c.field-meta.xml
<CustomField>
    <fullName>Donation_Honoree_Name__c</fullName>
    <description>The honoree name as provided by the donor.</description>
    <inlineHelpText>The honoree name as provided by the donor.</inlineHelpText>
    <label>Donation Honoree Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>