force-app/main/default/objects/DataImport__c/fields/Donation_Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Membership_End_Date__c</fullName>
    <inlineHelpText>Opportunity.npe01__Membership_End_Date__c</inlineHelpText>
    <label>Donation Membership End Date</label>
    <type>Date</type>
</CustomField>