force-app/main/default/objects/DataImport__c/fields/Donation_Notification_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Donation_Notification_Recipient_Name__c</fullName>
    <description>The name of the person to notify of this gift.</description>
    <inlineHelpText>The name of the person to notify of this gift.</inlineHelpText>
    <label>Donation Notification Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>