force-app/main/default/objects/DataImport__c/fields/Donation_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Donation_Record_Type_Name__c</fullName>
    <description>The Name of the Opportunity Record Type to use for the donation.  Uses default Record Type if left blank.</description>
    <inlineHelpText>Opportunity.RecordTypeId</inlineHelpText>
    <label>Donation Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>