force-app/main/default/objects/DataImport__c/fields/DonationCampaignImportStatus__c.field-meta.xml
<CustomField>
    <fullName>DonationCampaignImportStatus__c</fullName>
    <label>Donation Campaign Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>