force-app/main/default/objects/DataImport__c/fields/DonationImportStatus__c.field-meta.xml
<CustomField>
    <fullName>DonationImportStatus__c</fullName>
    <label>Donation Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>