force-app/main/default/objects/DataImport__c/fields/Elevate_Custom_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Elevate_Custom_Metadata__c</fullName>
    <description>Custom metadata from Elevate Giving Pages, stored as JSON.</description>
    <inlineHelpText>Custom metadata from Elevate Giving Pages, stored as JSON.</inlineHelpText>
    <label>Elevate Custom Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>