force-app/main/default/objects/DataImport__c/fields/Elevate_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Elevate_Payment_Status__c</fullName>
    <description>The transaction status shown in Elevate.</description>
    <inlineHelpText>The transaction status shown in Elevate.</inlineHelpText>
    <formula>
            CASE(Payment_Status__c,
                &apos;PENDING&apos;,
                &apos;Pending&apos;,

                &apos;CAPTURED&apos;,
                &apos;Succeeded&apos;,

                &apos;NONRETRYABLEERROR&apos;,
                &apos;Failed&apos;,

                &apos;RETRYABLEERROR&apos;,
                &apos;Failed&apos;,

                &apos;DECLINED&apos;,
                &apos;Declined&apos;,

                &apos;REFUNDISSUED&apos;,
                &apos;Succeeded&apos;,

                &apos;SUBMITTED&apos;,
                &apos;Submitted&apos;,

                &apos;SETTLED&apos;,
                &apos;Succeeded&apos;,

                &apos;AUTHORIZED&apos;,
                &apos;Authorized&apos;,

                &apos;EXPIRED&apos;,
                &apos;Expired Authorization&apos;,

                &apos;PAYMENTPROCESSING&apos;,
                &apos;Pending&apos;,

            &apos;&apos;)
        </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elevate Payment Status</label>
    <type>Text</type>
</CustomField>