force-app/main/default/objects/DataImport__c/fields/FailureInformation__c.field-meta.xml
<CustomField>
    <fullName>FailureInformation__c</fullName>
    <description>Description of what caused the Data Import record to fail to be imported.</description>
    <inlineHelpText>Description of what caused the Data Import record to fail to be imported.</inlineHelpText>
    <label>Failure Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>